# waypoint_navigator

./: CMakeLists.txt  package.xml
configs/: robot_config.yaml
include/waypoint_navigator/: waypoint_navigator_node.h
launch/: waypoint_navigator.launch.py  waypoint_navigator.launch.xml
paths/: trajectory_simple_enu.yaml
src/: waypoint_navigator_node.cpp
srv/: ExecutePathFromFile.srv  ExecutePathFromPkg.srv
