<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_navigator</name>
  <version>2.0.0</version>
  <description>Waypoint Navigator for ENU/GPS Trajectories</description>

  <maintainer email="mpopovic@ethz.ch">Marija Popovic</maintainer>

  <author>Marija Popovic</author>
  <author>Enric Galceran</author>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <!-- <depend>geodetic_utils</depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

